Fixed missing body tag

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
 </body>
 </html>
+<body>
 <h2>Follow Me Online</h2>
-
 <div class="social-buttons">
   <a href="https://youtube.com/@SohamOG07" target="_blank">📺 Visit YouTube</a>
   <a href="https://instagram.com/sohmm_07" target="_blank">📸 Visit Instagram</a>
 </div>
-sssssssss
+</body>
